fix grey button text line height so wraps better

--- a/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_AdmissionsStyles.scss
@@ -13,7 +13,7 @@
   color: #003a6e !important;
   height: 33%;
   z-index: 100;
-  line-height: 1.5em;
+  line-height: 1.4em;
   margin: 0em 0em 0.5em 0em;
   background: #e5e5e5;
   display: table;
